--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,10 @@
   "main": "./src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/server.js"
+    "start": "node ./src/server.js",
+    "db:migrate" : "npx sequelize-cli db:migrate",
+    "db:create" : "npx sequelize-cli db:create",
+    "db:seed:all" : "npx sequelize-cli"
   },
   "keywords": [],
   "author": "",
